--- a/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
+++ b/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/lLayout_wonderful_list_empty_view"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/color_white"
-              android:orientation="vertical"
-              android:weightSum="3">
+    android:id="@+id/lLayout_wonderful_list_empty_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/color_white"
+    android:clickable="true"
+    android:orientation="vertical"
+    android:weightSum="3">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <ImageView
         android:id="@+id/imgv_empty_layout_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/pic_no_message"/>
+        android:src="@drawable/pic_no_message" />
 
     <TextView
         android:id="@+id/tv_empty_layout_content"
@@ -27,6 +28,6 @@
         android:layout_marginTop="@dimen/y20"
         android:text="@string/NO_CONTENTS_1"
         android:textColor="@color/color_888888"
-        android:textSize="@dimen/sp16"/>
+        android:textSize="@dimen/sp16" />
 
 </LinearLayout>
