--- a/app/src/main/res/layout/fragment_bind_camera.xml
+++ b/app/src/main/res/layout/fragment_bind_camera.xml
@@ -65,18 +65,22 @@
             android:layout_below="@+id/imgV_camera_wifi_light_flash"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/y20"
-            android:src="@drawable/add_image_red_dot"
-            android:visibility="invisible" />
+            android:src="@drawable/add_image_red_dot" />
+
+        <View
+            android:id="@+id/v"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/imgV_camera_hand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/imgV_camera_red_dot"
+            android:layout_below="@+id/v"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/y10"
-            android:src="@drawable/image_hand"
-            android:visibility="gone" />
+            android:src="@drawable/image_hand" />
     </RelativeLayout>
 
 
