--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -47,6 +47,7 @@
         <attr name="ct_left_title" format="string|reference" />
         <attr name="ct_left_title_color" format="color|reference" />
         <attr name="ct_icon" format="reference" />
+        <attr name="ct_icon_right" format="reference" />
         <attr name="ct_enable_shadow" format="boolean" />
         <attr name="ct_title" format="string|reference" />
         <attr name="ct_title_color" format="color|reference" />
