登陆页面修改

--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         hunt:ct_icon="@drawable/login_btn_close"
         hunt:ct_title="@string/LOGIN"
+        hunt:ct_right_title="@string/Tap0_register"
         hunt:ct_title_color="@color/color_black" />
 
     <ViewSwitcher
